add api viewsets

--- a/templates/admin/pwa.html
+++ b/templates/admin/pwa.html
@@ -38,6 +38,7 @@
                         <meta content="yes" name="mobile-web-app-capable">
                         <meta content="yes" name="apple-mobile-web-app-capable">
                         <meta content="default" name="apple-mobile-web-app-status-bar-style">
+                        <link rel="apple-touch-icon" href="/static/admin/logo192.png">
                         `;
                         if (meta1) {head.appendChild(meta1)}
                         if (meta2) {head.appendChild(meta2)}
