--- a/templates/admin/admin_all_models.html
+++ b/templates/admin/admin_all_models.html
@@ -129,7 +129,7 @@
       {{end}}
 
       {{if eq $col $pk}}
-      {{else if contains $type "time" "timestamp"}}
+      {{else if or (contains $type "time" "timestamp") (and (contains (index $dbcolumns $col) "text") (eq (index $columns $col) ""))}}
       <input name="{{$col}}" id="{{$col}}" type="datetime-local" class='form-control input'>
       {{else if contains $col "uuid"}}
       <input name="{{$col}}" id="{{$col}}" type="text" class='form-control input' value="{{generateUUID}}" disabled>
