--- a/templates/admin/admin_all_models.html
+++ b/templates/admin/admin_all_models.html
@@ -153,6 +153,9 @@
 </form>
 </div>
 
+<script>
+  var pk = "{{$pk}}"
+</script>
 <script src="/static/admin/jodit_editor.min.js"></script>
 <script src="/static/admin/all_models.js"></script>
 {{template "pwa"}}
