--- a/static/admin/style.css
+++ b/static/admin/style.css
@@ -13,9 +13,8 @@
 body {
     width: auto;
     min-height: 100vh;
-    height: 100vh;
     overflow-x: hidden;
-    background-color: #01020A;
+    background-color: rgb(21, 41, 52);
     color: #fefefe;
     font-size: 16px;
 }
@@ -23,7 +22,7 @@ body {
 
 a {
     text-decoration: none;
-    color:black;
+    color: black;
 }
 
 td p {
@@ -31,17 +30,17 @@ td p {
 }
 
 *::-webkit-scrollbar {
-	width:6px;
+    width: 6px;
     height: 6px;
 }
 
 *::-webkit-scrollbar-track {
-  	background:transparent;
+    background: transparent;
 }
 
 *::-webkit-scrollbar-thumb {
-	background: rgba(1, 60, 190,0.91);
-	border-radius: 10px;
+    background: #143344;
+    border-radius: 10px;
 }
 
 /* Navbar */
@@ -101,7 +100,7 @@ nav ul li a:hover {
 }
 
 nav ul li a.active {
-    background: #675cff;
+    background: #152934;
     color: white;
 }
 
@@ -127,7 +126,8 @@ nav ul li a.active {
 }
 
 .logo:hover h1 {
-    color: #786ffb;
+    color: #224253;
+    cursor: pointer;
 }
 
 @media only screen and (max-width:1100px) {
@@ -204,21 +204,22 @@ nav ul li a.active {
 }
 
 
-.login-wrapper h1{
-    font-size: clamp(10px,10vw,80px);
+.login-wrapper h1 {
+    font-size: clamp(10px, 10vw, 80px);
     color: #fefefe;
     margin-bottom: 30px;
 }
 
 
 
-.wrapper a h1{
-    font-size: clamp(30px,10vw,100px);
+.wrapper a h1 {
+    font-size: clamp(60px, 10vw, 100px);
     color: #fefefe;
-    margin:30px 0;
+    margin: 30px 0;
 }
-.wrapper a h1:hover{
-    color: #1149ff;
+
+.wrapper a h1:hover {
+    color: black;
 }
 
 
@@ -233,10 +234,11 @@ nav ul li a.active {
 
 #model-name {
     color: #fefefe;
-    font-size: clamp(20px,5vw,80px);
+    font-size: 2rem;
 }
+
 #model-name:hover {
-    color: #1149ff;
+    color: #295871;
 }
 
 #admin-login {
@@ -245,13 +247,15 @@ nav ul li a.active {
     flex-direction: column;
     align-items: center;
 }
+
 .jodit-ui-form {
     width: 100%;
 }
+
 form .input-wrapper {
     width: 50%;
     height: 50px;
-    border: 3px solid #1149ff;
+    border: 2px solid black;
     border-radius: 15px;
     position: relative;
     display: flex;
@@ -261,24 +265,26 @@ form .input-wrapper {
 }
 
 
-form .input-wrapper svg{
+form .input-wrapper svg {
     width: 25px;
     margin: 0 20px;
 }
 
-form .input-wrapper input{
+form .input-wrapper input {
     width: 100%;
     height: 100%;
     outline: none;
     border: none;
     background: transparent;
-    font-size: 1.2em;
-    font-weight: 400;
+    font-size: 1rem;
+    font-weight: 600;
     color: #fefefe;
 }
-form .input-wrapper input::placeholder{
+
+form .input-wrapper input::placeholder {
     color: #3D3B3B;
-    font-weight: 400;
+    font-size: 1rem;
+    font-weight: 600;
 }
 
 form .submit-btn {
@@ -286,10 +292,9 @@ form .submit-btn {
     font-size: 1.1em;
     font-weight: 400;
     padding: 10px 20px;
-    border-radius: 10px;
     outline: none;
-    border-radius: 20px;
-    border: 2px solid #1149ff;
+    border-radius: 15px;
+    border: 2px solid black;
     background: #242526;
 }
 
@@ -302,14 +307,16 @@ form .submit-btn:hover {
     #admin-header nav {
         font-size: 15px;
     }
-    #admin-header nav ul li span{
+
+    #admin-header nav ul li span {
         display: none;
     }
+
     .wrapper .card-container {
         width: 90%;
     }
 
-    #admin-header nav ul li span{
+    #admin-header nav ul li span {
         display: none;
     }
 
@@ -322,9 +329,6 @@ form .submit-btn:hover {
         height: 70%;
     }
 
-    .table td img {
-        width: 100%;
-    }
     .search-input {
         padding: 0 30px;
     }
@@ -338,15 +342,15 @@ form .submit-btn:hover {
     justify-content: center;
 }
 
-.card-container .card{
+.card-container .card {
     height: 150px;
-    margin:20px;
+    margin: 20px;
     border-radius: 20px 20px 20px 20px;
     background: none;
     color: #fefefe;
     font-size: 1.5rem;
     box-shadow: 0 0 10px #18191A;
-    border: 1px solid #1149ff;
+    border: 1px solid black;
 }
 
 
@@ -360,7 +364,7 @@ form .submit-btn:hover {
 }
 
 .card-body .card-title {
-    font-size: clamp(20px,2vw,24px);
+    font-size: clamp(20px, 2vw, 24px);
     padding: 10% 0 20% 10%;
     text-transform: capitalize;
 }
@@ -372,14 +376,13 @@ form .submit-btn:hover {
     outline: none;
     background: #1c1e21;
     color: white;
-    border: 2px solid #1149ff;
+    border: 2px solid #0d2b3b;
 }
 
-.btn:hover {
+.btn:hover,.btn:focus {
     font-size: 1em;
     outline: none;
     border: 2px solid white;
-    outline: none;
 }
 
 .btn-left {
@@ -394,8 +397,8 @@ form .submit-btn:hover {
     justify-content: center;
     align-items: center;
     background: #18191a;
-    border: 1px solid #1149ff;
-    font-size: clamp(15px,2vw,25px);
+    border: 1px solid black;
+    font-size: clamp(15px, 2vw, 25px);
 }
 
 .btn-right {
@@ -404,84 +407,22 @@ form .submit-btn:hover {
     right: -1px;
     width: 50.4%;
     height: 50px;
-    border: 1px solid #1149ff;
+    border: 1px solid black;
     border-radius: 0 0 20px 0;
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     background: #18191a;
-    font-size: clamp(20px,2vw,30px);
+    font-size: clamp(20px, 2vw, 30px);
     cursor: pointer;
-    font-size: clamp(15px,2vw,25px);
+    font-size: clamp(15px, 2vw, 25px);
 }
 
-.btn-left:hover ,.btn-right:hover {
+.btn-left:hover,
+.btn-right:hover {
     border: 2px solid white;
 }
-
-
-
-
-/* ALL MODELS ADMIN */
-.table-container {
-    width: 88%;
-    margin: 0 auto;
-    overflow:auto;
-}
-
-
-.table {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    border: 1px solid #ccc;
-    border-collapse: collapse;
-}
-
-
-
-.table tr:nth-child(even) {
-    background: none;
-    border: 2px solid #1149ff;
-}
-
-.table tr:nth-child(odd) {
-    background: #0C141C;
-    border: 2px solid #1149ff;
-}
-
-.table th,
-.table td {
-  padding: .625em;
-  text-align: center;
-}
-
-.table td {
-    overflow: hidden;
-    max-height: 80px;
-}
-
-.table td img{
-    max-width: 35px;
-    border-radius: 20px;
-}
-
-.table td p a{
-    color: #c34545;
-    font-size: 1.1em;
-}
-
-.table th {
-    overflow: hidden;
-    background-color: #242526;
-    color: white;
-    font-size: clamp(15px,1vw,20px);
-    letter-spacing: .1em;
-    text-transform: uppercase;
-}
-
-
 
 /* SINGLE MODEL ADMIN */
 #myform {
@@ -491,6 +432,7 @@ form .submit-btn:hover {
     flex-direction: column;
     gap: 10px;
 }
+
 #myform .form-group img {
     margin-top: 10px;
     width: 100px;
@@ -504,7 +446,7 @@ form .form-group {
 form .form-group label {
     width: 100%;
     font-size: 1.4em;
-    font-weight: 400;
+    font-weight: 600;
     display: block;
 }
 
@@ -512,21 +454,21 @@ form .form-group input,
 form .form-group textarea {
     width: 100%;
     outline: none;
-    border: 3px solid #1149ff;
+    border: 3px solid #0d2b3b;
     border-radius: 10px;
     padding: 10px;
     background: #0c141c;
+    color: white;
     font-size: 1.2em;
-    font-weight: 400;
-    color: #fefefe;
+    font-weight: 700;
 }
 
 input[type="text"]:disabled {
-    color:rgb(83, 78, 78);
+    color: rgb(83, 78, 78);
 }
 
 form .form-group input::placeholder,
-form .form-group textarea::placeholder{
+form .form-group textarea::placeholder {
     color: #797373;
     font-weight: 400;
 }
@@ -538,12 +480,12 @@ form .form-group textarea::placeholder{
 .modal {
     width: 75%;
     height: 50%;
-    background-color: rgb(4, 15, 15); 
+    background-color: rgb(4, 15, 15);
     color: white;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     display: none;
     border-radius: 20px;
     overflow: hidden;
@@ -562,12 +504,14 @@ form .form-group textarea::placeholder{
     padding-top: 30px;
     display: flex;
     flex-direction: column;
+    color: white;
 }
 
 .modal.active input {
     color: white;
-    border-color: #1149ff;
+    border-color: #0d2b3b;
 }
+
 .modal.active input:disabled {
     color: white;
     border-color: red;
@@ -587,6 +531,10 @@ form .form-group textarea::placeholder{
     padding-top: 30px;
 }
 
+.modal.active .head h1 {
+    font-weight: 600;
+}
+
 .modal.active .btn-close {
     position: sticky;
     top: 10%;
@@ -595,8 +543,8 @@ form .form-group textarea::placeholder{
 
 
 .dash-title {
-    font-size: clamp(10px,10vw,80px);
-    margin:80px 0 50px 0;
+    font-size: clamp(10px, 10vw, 80px);
+    margin: 80px 0 50px 0;
     color: #fefefe;
     text-align: center;
 }
@@ -606,24 +554,26 @@ form .form-group textarea::placeholder{
 }
 
 @keyframes neon {
-    0%, 18%, 22%, 25%, 53%, 57%, 100% {
-        text-shadow: 0 0 20px #1149ff,0 0 40px #1149ff;
+
+    0%,
+    18%,
+    22%,
+    25%,
+    53%,
+    57%,
+    100% {
+        text-shadow: 0 0 20px #0d2b3b, 0 0 40px #0d2b3b;
     }
 
-    20%, 24%, 55% {
+    20%,
+    24%,
+    55% {
         text-shadow: none;
     }
-    
-    
 }
 
-
-
-
-
-
 .deleteBtn {
-    border: 2px solid #1149ff;
+    border: 2px solid #1c1d20;
     border-radius: 10px;
 }
 
@@ -639,27 +589,25 @@ form .form-group textarea::placeholder{
 
 
 .svgs {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
-    justify-items: center;
+    display: flex;
+    justify-content: center;
     align-items: center;
+    gap: 20px;
 }
+
 .svgs svg {
     width: 40px;
     color: white;
-    margin: 0 50px;
-}
-.svgs svg:hover {
-    color: #1149ff;
 }
 
+
 @media screen and (max-width:800px) {
-    #admin-header nav ul li span{
+    #admin-header nav ul li span {
         display: none;
     }
+
     .svgs svg {
-        width: clamp(20px,25px,40px);
+        width: clamp(20px, 25px, 40px);
         color: white;
         margin: 0;
     }
@@ -671,13 +619,10 @@ form .form-group textarea::placeholder{
         align-items: center;
         margin: 30px 0;
     }
-    .table td {
-        padding: 10px 0;
-    }
 }
 
 
-body > div.wrapper > div.table-container > table > tbody > tr > td > p {
+body>div.wrapper>div.table-container>table>tbody>tr>td>p {
     max-height: 100px;
 }
 
@@ -708,4 +653,3 @@ body > div.wrapper > div.table-container > table > tbody > tr > td > p {
 .search-input button {
     border-radius: 7px;
 }
-
