--- a/templates/admin/admin_all_models.html
+++ b/templates/admin/admin_all_models.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,159 +8,193 @@
   <meta name="description" content="Website Admin Page">
   {{template "admin_head"}}
   <link rel="stylesheet" href="/static/admin/jodit_editor.min.css">
+  <link rel="stylesheet" href="/static/admin/table.css">
   <title>Admin - {{.model_name}}</title>
 </head>
+
 <body>
 
-{{ template "admin_nav" . }}
+  {{ template "admin_nav" . }}
 
 
-{{$columns := .columns}}
-{{$dbType := .dbType}}
-{{$dbcolumns := .dbcolumns}}
-{{$columnsOrdered := .columnsOrdered}}
-{{$pk := .pk}}
+  {{$columns := .columns}}
+  {{$dbType := .dbType}}
+  {{$dbcolumns := .dbcolumns}}
+  {{$columnsOrdered := .columnsOrdered}}
+  {{$pk := .pk}}
 
-<div class="wrapper">
+  <div class="svgshidden">
+    <div class="export__file">
+      <svg xmlns="http://www.w3.org/2000/svg" title="Export" aria-hidden="true" focusable="false" data-prefix="fas"
+        data-icon="file-export" class="btn-export export__file-btn svg-inline--fa fa-file-export fa-w-18" role="img"
+        viewBox="0 0 576 512">
+        <path fill="white"
+          d="M384 121.9c0-6.3-2.5-12.4-7-16.9L279.1 7c-4.5-4.5-10.6-7-17-7H256v128h128zM571 308l-95.7-96.4c-10.1-10.1-27.4-3-27.4 11.3V288h-64v64h64v65.2c0 14.3 17.3 21.4 27.4 11.3L571 332c6.6-6.6 6.6-17.4 0-24zm-379 28v-32c0-8.8 7.2-16 16-16h176V160H248c-13.2 0-24-10.8-24-24V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V352H208c-8.8 0-16-7.2-16-16z" />
+      </svg>
+    </div>
+    <input type="file" id="import" style="display: none;">
+    <a href="#" aria-label="Import" title="Import Json File">
+      <svg class="btn-import" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas"
+        data-icon="file-import" class="svg-inline--fa fa-file-import fa-w-16" role="img" viewBox="0 0 512 512">
 
-  <div class="head-container">
-    <a href="/admin">
-      <h1 id="model-name" data-model="{{.model_name}}">{{.model_name}}</h1>
+        <path fill="currentColor"
+          d="M16 288c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h112v-64zm489-183L407.1 7c-4.5-4.5-10.6-7-17-7H384v128h128v-6.1c0-6.3-2.5-12.4-7-16.9zm-153 31V0H152c-13.3 0-24 10.7-24 24v264h128v-65.2c0-14.3 17.3-21.4 27.4-11.3L379 308c6.6 6.7 6.6 17.4 0 24l-95.7 96.4c-10.1 10.1-27.4 3-27.4-11.3V352H128v136c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H376c-13.2 0-24-10.8-24-24z" />
+      </svg>
     </a>
-    
-    <div class="svgs">
-      <label for="import" style="display: none;"></label>
-      <input type="file" id="import" style="display: none;">
-      <a href="#" aria-label="Import">
-        <svg id="btn-import" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="file-import" class="svg-inline--fa fa-file-import fa-w-16" role="img" viewBox="0 0 512 512">
-          
-          <path fill="currentColor" d="M16 288c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h112v-64zm489-183L407.1 7c-4.5-4.5-10.6-7-17-7H384v128h128v-6.1c0-6.3-2.5-12.4-7-16.9zm-153 31V0H152c-13.3 0-24 10.7-24 24v264h128v-65.2c0-14.3 17.3-21.4 27.4-11.3L379 308c6.6 6.7 6.6 17.4 0 24l-95.7 96.4c-10.1 10.1-27.4 3-27.4-11.3V352H128v136c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H376c-13.2 0-24-10.8-24-24z"/></svg>
-      </a>
-      <a href="#" aria-label="Export">
-        <svg id="btn-export" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="file-export" class="svg-inline--fa fa-file-export fa-w-18" role="img" viewBox="0 0 576 512"><path fill="currentColor" d="M384 121.9c0-6.3-2.5-12.4-7-16.9L279.1 7c-4.5-4.5-10.6-7-17-7H256v128h128zM571 308l-95.7-96.4c-10.1-10.1-27.4-3-27.4 11.3V288h-64v64h64v65.2c0 14.3 17.3 21.4 27.4 11.3L571 332c6.6-6.6 6.6-17.4 0-24zm-379 28v-32c0-8.8 7.2-16 16-16h176V160H248c-13.2 0-24-10.8-24-24V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V352H208c-8.8 0-16-7.2-16-16z"/></svg>
-      </a>
-      <a href="#" aria-label="Create">
-        <svg id="btn-create" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="plus" class="svg-inline--fa fa-plus fa-w-14" role="img" viewBox="0 0 448 512"><path fill="currentColor" d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"/></svg>
-      </a>
-    </div>
-    
+
+    <svg class="btn-create" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas"
+      data-icon="plus" class="svg-inline--fa fa-plus fa-w-14" role="img" viewBox="0 0 448 512">
+      <path fill="currentColor"
+        d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z" />
+    </svg>
   </div>
 
-  <form class="search-input">
-    <input type="text" name="search" placeholder="{{$pk}}=1 or email='any'..." class="form-control input">
-    <span style="white-space: nowrap;margin: auto;">Order By:</span>
-    <input type="text" name="orderby" placeholder="-{{$pk}}" class="form-control input">
-    <button class="btn" type="submit" style="display: none;">Search</button>
-  </form>
+  <div class="wrapper">
+    <main class="table" id="customers_table">
+      <section class="table__header">
+        <a href="/admin"><h1 id="model-name" data-model="{{.model_name}}">{{.model_name}}</h1></a>
+        
+        <form class="input-group search-input" for="searchk">
+          <input id="searchk" type="text" name="search" placeholder="{{$pk}}=1 or email='any'..." class="input">
+          <span style="white-space: nowrap;margin: auto;" class="orderby">Order By:</span>
+          <input type="text" name="orderby" placeholder="-{{$pk}}" class="form-control input">
+          <button class="btn" type="submit" style="display: none;" aria-label="submit search">Search</button>
+        </form>
+        <div class="svgs">
+          <a href="#" aria-label="export" title="Export Json File">
+            <svg class="btn-export" xmlns="http://www.w3.org/2000/svg" title="Export" aria-hidden="true" focusable="false"
+              data-prefix="fas" data-icon="file-export" role="img" viewBox="0 0 576 512">
+              <path fill="white"
+                d="M384 121.9c0-6.3-2.5-12.4-7-16.9L279.1 7c-4.5-4.5-10.6-7-17-7H256v128h128zM571 308l-95.7-96.4c-10.1-10.1-27.4-3-27.4 11.3V288h-64v64h64v65.2c0 14.3 17.3 21.4 27.4 11.3L571 332c6.6-6.6 6.6-17.4 0-24zm-379 28v-32c0-8.8 7.2-16 16-16h176V160H248c-13.2 0-24-10.8-24-24V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V352H208c-8.8 0-16-7.2-16-16z" />
+            </svg>
+          </a>
+          <input type="file" id="import" style="display: none;">
+          <a href="#" aria-label="Import" title="Import Json File">
+            <svg class="btn-import" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"
+              data-prefix="fas" data-icon="file-import" class="svg-inline--fa fa-file-import fa-w-16" role="img"
+              viewBox="0 0 512 512">
 
-  
-  <div class="table-container">
-    <table class="table">
-        <thead>
-          <tr>
+              <path fill="currentColor"
+                d="M16 288c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h112v-64zm489-183L407.1 7c-4.5-4.5-10.6-7-17-7H384v128h128v-6.1c0-6.3-2.5-12.4-7-16.9zm-153 31V0H152c-13.3 0-24 10.7-24 24v264h128v-65.2c0-14.3 17.3-21.4 27.4-11.3L379 308c6.6 6.7 6.6 17.4 0 24l-95.7 96.4c-10.1 10.1-27.4 3-27.4-11.3V352H128v136c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H376c-13.2 0-24-10.8-24-24z" />
+            </svg>
+          </a>
+
+          <svg class="btn-create" title="Add" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"
+            data-prefix="fas" data-icon="plus" class="svg-inline--fa fa-plus fa-w-14" role="img" viewBox="0 0 448 512">
+            <path fill="currentColor"
+              d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z" />
+          </svg>
+        </div>
+      </section>
+
+      <section class="table__body">
+        <table>
+          <thead>
+            <tr>
               {{range $columnsOrdered}}
-                <th scope="col">{{.}}</th>
+              <th> {{.}} </th>
               {{end}}
-              <th scope="col">DELETE</th>
-          </tr>
-        </thead>
-
-        {{$i := 0}}
-        <tbody class="tbody">
-          {{range $row := .rows}}
-          <tr>
-            {{range $key := $columnsOrdered}} 
-            {{$value := index $row $key}}  
+              <th>DELETE</th>
+            </tr>
+          </thead>
+          {{$i := 0}}
+          <tbody class="tbody">
+            {{range $row := .rows}}
+            <tr>
+              {{range $key := $columnsOrdered}}
+              {{$value := index $row $key}}
               {{if eq $key $pk }}
-                <td>
-                  <p style="overflow-wrap:break-word;max-width: 20vw;margin:0 auto;">
-                    <a href="/admin/get/{{$.model_name}}/{{$value}}">{{$value}}</a>
-                  </p>
-                </td>
+              <td>
+                <a href="/admin/get/{{$.model_name}}/{{$value}}">{{$value}}</a>
+              </td>
               {{else if eq $key "image" "photo" "img" "url"}}
-                <td style="max-width: 20vw;">
-                  <img src="{{$value}}" alt="image">
-                </td>
+              <td>
+                <img src="{{$value}}" alt="image">
+              </td>
               {{else if contains (index $columns $key) "bool"}}
-                <td>
-                  {{$i = add $i 1}}
-                  {{if and (contains (index $dbcolumns $key) "int") (eq $dbType "mysql" "maria" "mariadb")}}
-                    <input id="check-{{$i}}" name="check-{{$i}}" type="checkbox" class="checkbox" {{if eq $value "1"}}checked{{end}} disabled>
-                    <label style="display: none;" for="check-{{$i}}" >Checkbox</label>          
-                  {{else}}
-                    <input id="check-{{$i}}" name="check-{{$i}}" type="checkbox" class="checkbox" {{if eq $value 1}}checked{{end}} disabled>
-                    <label style="display: none;" for="check-{{$i}}" >Checkbox</label>  
-                  {{end}}
-                </td>
+              <td>
+                {{$i = add $i 1}}
+                {{if and (contains (index $dbcolumns $key) "int") (eq $dbType "mysql" "maria" "mariadb")}}
+                <input id="check-{{$i}}" name="check-{{$i}}" type="checkbox" class="checkbox" {{if eq $value "1"
+                  }}checked{{end}} disabled>
+                <label style="display: none;" for="check-{{$i}}">Checkbox</label>
+                {{else}}
+                <input id="check-{{$i}}" name="check-{{$i}}" type="checkbox" class="checkbox" {{if eq $value
+                  1}}checked{{end}} disabled>
+                <label style="display: none;" for="check-{{$i}}">Checkbox</label>
+                {{end}}
+              </td>
               {{else}}
-                  <td>
-                    <p style="overflow-wrap:break-word;max-width: 20vw;margin:0 auto;">
-                      {{truncate $value 50}}
-                    </p>
-                  </td>
-              {{end}} 
+              <td>
+                <p style="overflow-wrap:break-word;max-width: 20vw;margin:0 auto;">
+                  {{truncate $value 50}}
+                </p>
+              </td>
+              {{end}}
+              {{end}}
+              <td>
+                <button class="btn btn-danger deleteBtn" data-id="{{index . $pk}}">X</button>
+              </td>
+            </tr>
             {{end}}
-            <td>
-              <button class="btn btn-danger deleteBtn" data-id="{{index . $pk}}">X</button>
-            </td>
-          </tr>
-          {{end}}      
-        </tbody>
-      </table>
-      <div class="box-inf-scroll"></div>
+          </tbody>
+        </table>
+        <div class="box-inf-scroll"></div>
+      </section>
+    </main>
   </div>
-  
-</div>
 
 
 
-<div class="modal">
-  <div class="head">
-    <h1>Create {{.model_name}}</h1>
-    <button class="btn btn-close" style="border-radius: 10px;">X</button>
-  </div>
-  
-  <form id="myform">
-    {{range $col := $columnsOrdered}}
-    {{$type := index $columns $col}}
-    <div class="form-group">
-      {{if eq $col $pk}}
-      {{else}}
-        <label for="{{$col}}">{{$col}}:</label><div style="margin: 10px 0 10px 0;"></div>
-      {{end}}
-
-      {{if eq $col $pk}}
-      {{else if contains (index $columns $col) "time" "timestamp" "Time"}}
-      <input name="{{$col}}" id="{{$col}}" type="datetime-local" class='form-control input'>
-      {{else if eq $col "uuid"}}
-      <input name="{{$col}}" id="{{$col}}" type="text" class='form-control input' value="{{generateUUID}}">
-      {{else if eq $col "password"}}
-      <input name="{{$col}}" id="{{$col}}" type="password" class='form-control input'>
-      {{else if contains (index $dbcolumns $col) "text"}}
-      <textarea class="editor" data-key="{{$col}}"></textarea>
-      {{else if contains $type "bool"}}
-      <div class="form-check form-switch">
-        <input style="height: 30px;" type="checkbox" name="{{$col}}" id="{{$col}}" class="form-check-input input">
-      </div>
-      {{else}}
-        <input type="text" id="{{$col}}" name="{{$col}}" class='form-control input'>
-      {{end}}       
+  <div class="modal">
+    <div class="head">
+      <h1>Create {{.model_name}}</h1>
+      <button class="btn btn-close" style="border-radius: 10px;">X</button>
     </div>
-    <div style="margin: 10px 0 10px 0;"></div>
-    {{end}}
-    <div style="margin: 10px 0 10px 0;"></div>
-  <button class="btn" style="border-radius: 20px;" type="submit">Create</button>
-  <div style="margin: 20px 0 20px 0;"></div>
-</form>
-</div>
 
-<script>
-  var pk = "{{$pk}}"
-</script>
-<script src="/static/admin/jodit_editor.min.js"></script>
-<script src="/static/admin/all_models.js"></script>
-{{template "pwa"}}
+    <form id="myform">
+      {{range $col := $columnsOrdered}}
+      {{$type := index $columns $col}}
+      <div class="form-group">
+        {{if eq $col $pk}}
+        {{else}}
+        <label for="{{$col}}">{{$col}}:</label>
+        <div style="margin: 10px 0 10px 0;"></div>
+        {{end}}
+
+        {{if eq $col $pk}}
+        {{else if contains (index $columns $col) "time" "timestamp" "Time"}}
+        <input name="{{$col}}" id="{{$col}}" type="datetime-local" class='form-control input'>
+        {{else if eq $col "uuid"}}
+        <input name="{{$col}}" id="{{$col}}" type="text" class='form-control input' value="{{generateUUID}}">
+        {{else if eq $col "password"}}
+        <input name="{{$col}}" id="{{$col}}" type="password" class='form-control input'>
+        {{else if contains (index $dbcolumns $col) "text"}}
+        <textarea class="editor" data-key="{{$col}}"></textarea>
+        {{else if contains $type "bool"}}
+        <div class="form-check form-switch">
+          <input style="height: 30px;" type="checkbox" name="{{$col}}" id="{{$col}}" class="form-check-input input">
+        </div>
+        {{else}}
+        <input type="text" id="{{$col}}" name="{{$col}}" class='form-control input'>
+        {{end}}
+      </div>
+      <div style="margin: 10px 0 10px 0;"></div>
+      {{end}}
+      <div style="margin: 10px 0 10px 0;"></div>
+      <button class="btn" style="border-radius: 20px;" type="submit">Create</button>
+      <div style="margin: 20px 0 20px 0;"></div>
+    </form>
+  </div>
+
+  <script>
+    var pk = "{{$pk}}"
+  </script>
+  <script src="/static/admin/jodit_editor.min.js"></script>
+  <script src="/static/admin/all_models.js"></script>
+  {{template "pwa"}}
 
 
 </body>
+
 </html>
