--- a/static/admin/table.css
+++ b/static/admin/table.css
@@ -91,8 +91,10 @@ thead th {
     left: 0;
     background-color: #302e36fe;
     cursor: pointer;
+    font-weight: 600;
     text-transform: capitalize;
 }
+
 
 tbody tr:nth-child(even) {
     background-color: #0000000b;
@@ -188,12 +190,10 @@ thead th span.icon-arrow {
     color: white;
     width: 40px;
     height: 40px;
-    margin: 0 15px 0 0;
     transition: .2s ease-in-out;
 }
 
 .svgs svg.btn-export {
-    width: 45px;
     fill: white;
     cursor: pointer;
     margin: 0;
@@ -236,9 +236,11 @@ thead th span.icon-arrow {
     main.table {
         width: 95vw;
     }
+
     .table__header .input-group input {
         width: 55vw;
     }
+
     span.orderby,
     .svgs,
     form.search-input .form-control {
@@ -250,23 +252,23 @@ thead th span.icon-arrow {
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 10px;
+        gap: 20px;
         margin-top: 100px;
+        transition: .4s ease;
     }
-
-    .export__file .btn-export {
-        width: 40px;
-        cursor: pointer;
-        margin: 0;
-    }
-    .export__file .btn-export:hover path {
-        fill: #295871;
-        transform: scale(1.05);
-    }
-
+    
     .svgshidden svg {
         width: 35px;
         cursor: pointer;
+        margin: 0;
+        transition: .4s ease;
+    }
+    .svgshidden svg g {
+        fill: white;
+    }
+    .svgshidden svg:hover path {
+        fill: #295871;
+        transform: scale(1.05);
     }
 
     .table__header .input-group {
@@ -276,15 +278,6 @@ thead th span.icon-arrow {
 
     .table td {
         padding: 10px 8px;
-    }
-
-    .svgshidden .export__file {
-        margin: 0;
-    }
-
-    .svgshidden .btn-import {
-        color: white;
-        margin: 0 30px;
     }
 
 }
