--- a/templates/admin/admin_single_model.html
+++ b/templates/admin/admin_single_model.html
@@ -29,16 +29,12 @@
       {{if or (eq $key $pk) (and (eq $key "password") (eq $data.model_name "users"))}}
       <input type="text" id="{{$key}}" name="{{$key}}" class='form-control input' value="{{$value}}" disabled>
       {{else if index $fkeys $key }}
-        <select name="{{$key}}" id="{{$key}}" class='form-control input'>
-         <option value="">-- Choose --</option>
-         {{range index $fkeys $key}}
-            {{if eq $value .}}
-            <option value="{{.}}" selected>{{.}}</option>
-            {{else}}
-            <option value="{{.}}">{{.}}</option>
-            {{end}}
-         {{end}}
-        </select>
+      <input type="text" class="form-control input" name="{{$key}}" id="{{$key}}" list="{{$key}}-options" value="{{$value}}">
+      <datalist id="{{$key}}-options">
+       {{range index $fkeys $key}}
+          <option value="{{.}}">{{.}}</option>
+       {{end}}
+      </datalist>
       {{else if contains (index $columns $key) "time" "Time"}}
       <input name="{{$key}}" id="{{$key}}" value="{{jsTime $value}}" type="datetime-local" class='form-control input'>
       {{else if contains $key "image" "photo"}}
