--- a/templates/admin/admin_all_models.html
+++ b/templates/admin/admin_all_models.html
@@ -18,6 +18,7 @@
 
 
   {{$columns := .columns}}
+  {{$admin_path := .admin_path}}
   {{$fkeys := .fkeys}}
   {{$dbType := .dbType}}
   {{$dbcolumns := .dbcolumns}}
@@ -78,7 +79,7 @@
   <div class="wrapper">
     <main class="table" id="customers_table">
       <section class="table__header">
-        <a href="/admin">
+        <a href="{{.admin_path}}">
           <h1 id="model-name" data-model="{{.model_name}}">{{.model_name}}</h1>
         </a>
 
@@ -163,7 +164,7 @@
               {{$value := index $row $key}}
               {{if eq $key $pk }}
               <td>
-                <a href="/admin/get/{{$.model_name}}/{{$value}}">{{$value}}</a>
+                <a href="{{$admin_path}}/get/{{$.model_name}}/{{$value}}">{{$value}}</a>
               </td>
               {{else if eq $key "image" "photo" "img" "url"}}
               <td>
@@ -258,6 +259,7 @@
 
   <script>
     var pk = "{{$pk}}"
+    var admin_path = "{{$admin_path}}"
   </script>
   <script src="/static/admin/jodit_editor.min.js"></script>
   <script src="/static/admin/all_models.js"></script>
