--- a/templates/admin/logs.html
+++ b/templates/admin/logs.html
@@ -36,7 +36,8 @@
 </head>
 <body>
     {{ template "admin_nav" . }}
-    <a href="/admin">
+    {{$admin_path := .admin_path}}
+    <a href="{{$admin_path}}">
         <h1 style="text-align: center;font-size: 5vw;margin-top: 80px;">Logs</h1>
     </a>
     <div class="container">
