add secure logs ws

--- a/templates/admin/logs.html
+++ b/templates/admin/logs.html
@@ -60,8 +60,9 @@
 
 <script src="/static/tools/bus.js"></script>
 <script>
+    let secure = parseFloat("{{.secure}}");
     let container = document.querySelector(".container");   
-    let bus = new Bus();
+    let bus = new Bus(secure=secure);
     bus.OnOpen = () => {
         bus.Subscribe("klog:logs",(data,subs) => {
             let p = document.createElement("p");
