--- a/templates/admin/admin_single_model.html
+++ b/templates/admin/admin_single_model.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+{{$static := .static_url}}
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Website Admin Page">
-  {{template "admin_head"}}
-  <link rel="stylesheet" href="/static/admin/jodit_editor.min.css">
+  {{template "admin_head" $static}}
+  <link rel="stylesheet" href="{{$static}}/admin/jodit_editor.min.css">
   <title>Admin - Single {{.model_name}}</title>
 </head>
 <body>
@@ -64,8 +65,8 @@
 <script>
   var admin_path = "{{$admin_path}}";
 </script>
-<script src="/static/admin/jodit_editor.min.js"></script>
-<script src="/static/admin/single_model.js"></script>
+<script src="{{$static}}/admin/jodit_editor.min.js"></script>
+<script src="{{$static}}/admin/single_model.js"></script>
 {{template "pwa"}}
 
 
