--- a/templates/admin/admin_all_models.html
+++ b/templates/admin/admin_all_models.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{{$static := .static_url}}
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Website Admin Page">
-  {{template "admin_head"}}
-  <link rel="stylesheet" href="/static/admin/jodit_editor.min.css">
-  <link rel="stylesheet" href="/static/admin/table.css">
+  {{template "admin_head" $static}}
+  <link rel="stylesheet" href="{{$static}}/admin/jodit_editor.min.css">
+  <link rel="stylesheet" href="{{$static}}/admin/table.css">
   <title>Admin - {{.model_name}}</title>
 </head>
 
@@ -261,8 +261,8 @@
     var pk = "{{$pk}}"
     var admin_path = "{{$admin_path}}"
   </script>
-  <script src="/static/admin/jodit_editor.min.js"></script>
-  <script src="/static/admin/all_models.js"></script>
+  <script src="{{$static}}/admin/jodit_editor.min.js"></script>
+  <script src="{{$static}}/admin/all_models.js"></script>
   {{template "pwa"}}
 
 
