--- a/templates/admin/admin_tools_template.html
+++ b/templates/admin/admin_tools_template.html
@@ -1,5 +1,5 @@
 {{define "admin_tools"}}
-<script src="/static/tools/notify.js" defer></script>
-<script src="/static/tools/ask.js" defer></script>
-<script src="/static/tools/getandpost.js" defer></script>
+<script src="{{.}}/tools/notify.js" defer></script>
+<script src="{{.}}/tools/ask.js" defer></script>
+<script src="{{.}}/tools/getandpost.js" defer></script>
 {{end}}
