--- a/templates/admin/api.html
+++ b/templates/admin/api.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+  {{$static := .static_url}}
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Website Admin Page">
-  {{template "admin_head"}}
-  <link rel="stylesheet" href="/static/admin/jodit_editor.min.css">
+  {{template "admin_head" $static}}
+  <link rel="stylesheet" href="{{$static}}/admin/jodit_editor.min.css">
   <style> 
   .model {
         width: fit-content;
@@ -136,7 +137,7 @@
 </div>
 
 
-<script src="/static/admin/jodit_editor.min.js"></script>
+<script src="{{$static}}/admin/jodit_editor.min.js"></script>
 {{template "pwa"}}
 </body>
 </html>
