--- a/templates/admin/logs.html
+++ b/templates/admin/logs.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+    {{$static := .static_url}}
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {{template "admin_head"}}
+    {{template "admin_head" $static}}
     <style>
         .container {
             width: 90%;
@@ -58,7 +59,7 @@
         {{end}}
     </div>
 
-<script src="/static/tools/bus.js"></script>
+<script src="{{$static}}/tools/bus.js"></script>
 <script>
     let secure = "{{.secure}}" == "true";
     let container = document.querySelector(".container");   
