--- a/templates/admin/api.html
+++ b/templates/admin/api.html
@@ -46,7 +46,7 @@
     align-items: center;
   }
   </style>
-  <title>Api</title>
+  <title>KORM - Api</title>
 </head>
 <body>
 {{$req := .Request}}
