--- a/templates/admin/admin_index.html
+++ b/templates/admin/admin_index.html
@@ -17,7 +17,7 @@
   <h1 class="dash-title">Dashboard</h1>
   <div class="card-container">
     {{range .tables}}
-      <div class="card" style="width: 18rem;">
+      <div class="card">
         <div class="card-body">
           <h2 class="card-title">{{.}}</h2>
           <a href="{{$admin_path}}/table/{{.}}" class="btn-left">All</a>
