--- a/templates/admin/admin_login.html
+++ b/templates/admin/admin_login.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 {{$static := .static_url}}
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Login Page">
     {{template "admin_head" $static}}
-    <title>Admin Login</title>
+    <title>KORM - Admin Login</title>
 </head>
 
 {{$admin_path := .admin_path}}
+
 <body>
     {{ template "admin_nav" . }}
     <div class="login-wrapper">
-        <h1>Admin Login</h1>
+        <h1>Login</h1>
         <form id="admin-login">
             <div class="input-wrapper">
                 <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="envelope"
@@ -24,7 +26,7 @@
                         d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z">
                     </path>
                 </svg>
-                <input type="email" id="email" placeholder="E-mail" required />
+                <input type="email" id="email" placeholder="E-mail" required readonly autocomplete="off" />
             </div>
             <div class="input-wrapper">
                 <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="lock"
@@ -34,7 +36,7 @@
                         d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z">
                     </path>
                 </svg>
-                <input type="password" id="password" placeholder="Password" required />
+                <input type="password" id="password" placeholder="Password" required readonly autocomplete="off" />
             </div>
             <button type="submit" class="submit-btn">Login</button>
         </form>
