--- a/templates/admin/logs.html
+++ b/templates/admin/logs.html
@@ -33,7 +33,7 @@
             color: black;
         }
     </style>
-    <title>Logs</title>
+    <title>KORM - Logs</title>
 </head>
 <body>
     {{ template "admin_nav" . }}
