--- a/templates/admin/pwa.html
+++ b/templates/admin/pwa.html
@@ -1,5 +1,19 @@
 {{define "pwa"}}
 <script>
+    let allInp = document.querySelectorAll("input");
+    allInp.forEach(inp => {
+        if (inp.hasAttribute("readonly")) {
+            inp.addEventListener("focus", () => {
+                inp.removeAttribute('readonly');
+                inp.classList.add("active");
+            })
+            inp.addEventListener("blur", () => {
+                if (!inp.value.length) {
+                    inp.classList.remove("active");
+                }
+            })
+        }
+    });
     var isChromium = window.chrome;
     var winNav = window.navigator;
     var isChromeOnMac = winNav.userAgent.match("CriOS");
@@ -9,49 +23,49 @@
     let meta3;
     let meta4;
     if (!document.querySelector("meta[name=\"application-name\"]")) {
-        meta1=document.createElement("meta");
-        meta1.content="KaGo"
-        meta1.name="application-name"
+        meta1 = document.createElement("meta");
+        meta1.content = "KaGo"
+        meta1.name = "application-name"
     }
 
     if (!document.querySelector("meta[name=\"apple-mobile-web-app-title\"]")) {
-        meta2=document.createElement("meta");
-        meta2.content="KaGo"
-        meta2.name="apple-mobile-web-app-title"
+        meta2 = document.createElement("meta");
+        meta2.content = "KaGo"
+        meta2.name = "apple-mobile-web-app-title"
     }
     if (!document.querySelector("meta[name=\"theme-color\"]")) {
-        meta3=document.createElement("meta");
-        meta3.content="#0A0302"
-        meta3.name="theme-color"
+        meta3 = document.createElement("meta");
+        meta3.content = "#0A0302"
+        meta3.name = "theme-color"
     }
     if (!document.querySelector("meta[name=\"msapplication-TileColor\"]")) {
-        meta4=document.createElement("meta");
-        meta4.content="#ffffff"
-        meta4.name="msapplication-TileColor"
+        meta4 = document.createElement("meta");
+        meta4.content = "#ffffff"
+        meta4.name = "msapplication-TileColor"
     }
 
-    if(isChromium !== null) {
+    if (isChromium !== null) {
         window.addEventListener('load', () => {
             if ('serviceWorker' in navigator) {
-                        head.innerHTML += `
+                head.innerHTML += `
                         <link href="/manifest.webmanifest" rel="manifest">
                         <meta content="yes" name="mobile-web-app-capable">
                         <meta content="yes" name="apple-mobile-web-app-capable">
                         <meta content="default" name="apple-mobile-web-app-status-bar-style">
                         <link rel="apple-touch-icon" href="/static/admin/logo192.png">
                         `;
-                        if (meta1) {head.appendChild(meta1)}
-                        if (meta2) {head.appendChild(meta2)}
-                        if (meta3) {head.appendChild(meta3)}
-                        if (meta4) {head.appendChild(meta4)}
-                        navigator.serviceWorker.register('/sw.js')
-                        .then((reg) => {
-                            // registration worked
-                            //console.log('Registration succeeded. Scope is ' + reg.scope);
-                        }).catch((error) => {
-                            // registration failed
-                            console.log('Registration failed with ' + error);
-                        });
+                if (meta1) { head.appendChild(meta1) }
+                if (meta2) { head.appendChild(meta2) }
+                if (meta3) { head.appendChild(meta3) }
+                if (meta4) { head.appendChild(meta4) }
+                navigator.serviceWorker.register('/sw.js')
+                    .then((reg) => {
+                        // registration worked
+                        //console.log('Registration succeeded. Scope is ' + reg.scope);
+                    }).catch((error) => {
+                        // registration failed
+                        console.log('Registration failed with ' + error);
+                    });
             }
         })
     }
