add notyf to dashboard

--- a/templates/admin/admin_head.html
+++ b/templates/admin/admin_head.html
@@ -2,6 +2,7 @@
 <link rel="icon" type="image/png" href="{{.}}/admin/logo192.png"/>
 <!-- LOCAL -->
 <link rel="stylesheet" href="{{.}}/admin/style.css">
+<link rel="stylesheet" href="{{.}}/tools/notyf.min.css">
 
 {{template "admin_tools" .}}
 {{end}}
